# ktexteditor

./: README_branch.md
autotests/: CMakeLists.txt
autotests/src/: multicursor_test.cpp  multicursor_test.h  searchbar_test.cpp  searchbar_test.h
src/: CMakeLists.txt
src/data/: katepart5ui.rc
src/document/: katedocument.cpp
src/include/ktexteditor/: mainwindow.h  movingcursor.h  movingrange.h  plugin.h  view.h
src/inputmode/: kateabstractinputmode.cpp
src/render/: katerenderer.cpp  katerenderer.h
src/script/: katescripteditor.cpp
src/search/: katesearchbar.cpp  katesearchbar.h  searchbarpower.ui
src/swapfile/: kateswapfile.cpp
src/theme/: CMakeLists.txt  EditorColorModel.cpp  EditorColorModel.h  TextStyleModel.cpp  TextStyleModel.h  TextStyleTreeView.cpp  TextStyleTreeView.h  TreeItem_p.h  main.cpp
src/undo/: kateundo.cpp  kateundo.h  kateundomanager.cpp  kateundomanager.h
src/utils/: kateglobal.cpp  kateglobal.h  katetemplatehandler.cpp  ktexteditor.cpp  mainwindow.cpp
src/view/: katemulticlipboard.cpp  katemulticlipboard.h  katemulticursor.cpp  katemulticursor.h  kateview.cpp  kateview.h  kateviewaccessible.h  kateviewhelpers.cpp  kateviewinternal.cpp  kateviewinternal.h
src/vimode/: inputmodemanager.cpp
src/vimode/modes/: modebase.cpp
